package com.example.shop.command;

public interface OrderCommand {
    void execute();
}